--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Node modules
 /node_modules
+
+# Yarn
 /.pnp
 .pnp.*
 .yarn/*
@@ -10,32 +12,70 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Build output
 /build
 
-# misc
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# Env files (all environments, never commit)
+.env
+.env.*
+!.env.example
+.env.local
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# VSCode
+.vscode/
+
+# MacOS
+*.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+._*
+.Spotlight-V100
+.Trashes
+
+# IDEs
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+# Local npm cache
+.npm
+
+# Local jest cache
+.jest/
+
+# Local storybook
+.storybook/
+
+# Local cypress
+cypress/videos/
+cypress/screenshots/
+
+# Miscellaneous
+*.log
+*.swp
+*.swo
